--- a/index.html
+++ b/index.html
@@ -24,16 +24,55 @@
                 <h1 class="logo-text">Fitness</h1>
             </div>
             <div class="menu">
-                <li>Home</li>
-                <li>Service</li>
-                <li>Contact</li>
-                <li>About</li>
+                <ul class="menu-items">
+                    <li class="menu-button"><a class="menu-button-text" href="">Home</a></li>
+                    <li><a href="">Service</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">About</a></li>
+                </ul>
             </div>
         </nav>
 
     </header>
 
     <main>
+        <section class="hero-section">
+            <div class="hero-left">
+                <div class="hp-text">
+                    <h1 class="h-text">Get body in<span class="diff-text-style"> shape</span> & stay healthy</h1>
+                    <p class="p-text">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                </div>
+
+                <div class="two-button">
+                    <button class="hero-buttons">
+                        Join Club Now!
+                    </button>
+                    <button class="hero-buttons">
+                        Download App
+                    </button>
+                </div>
+
+            </div>
+            <div class="hero-right">
+
+                <div class="small-card-left">
+                    <div class="circle"></div>
+                    <div>
+                        <h2>350 +</h2>
+                        <p>Video tutorial</p>
+                    </div>
+
+                </div>
+                <div>
+                    <img src="/img/banner.png" alt="">
+                </div>
+                <div class="small-card-right">
+                    <h2>500 +</h2>
+                    <p>Free Workout Videos</p>
+                </div>
+
+            </div>
+        </section>
 
 
     </main>
