--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="/css/mystyle.css">
+    <link rel="stylesheet" href="css/mystyle.css">
 
 </head>
 
 <body class="inter-font">
 
-    <header>
-
+    <header class="header-section">
         <nav>
             <div class="logo">
                 <h1 class="logo-text">Fitness</h1>
@@ -32,10 +31,6 @@
                 </ul>
             </div>
         </nav>
-
-    </header>
-
-    <main>
         <section class="hero-section">
             <div class="hero-left">
                 <div class="hp-text">
@@ -64,7 +59,7 @@
 
                 </div>
                 <div>
-                    <img src="/img/banner.png" alt="">
+                    <img src="img/banner.png" alt="">
                 </div>
                 <div class="small-card-right">
                     <h2>500 +</h2>
@@ -73,6 +68,11 @@
 
             </div>
         </section>
+
+    </header>
+
+    <main>
+        
 
 
     </main>
