--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/mystyle.css">
 
@@ -34,15 +37,16 @@
         <section class="hero-section">
             <div class="hero-left">
                 <div class="hp-text">
-                    <h1 class="h-text">Get body in<span class="diff-text-style"> shape</span> & stay healthy</h1>
-                    <p class="p-text">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                    <h1 class="h-text">Get body in<span class="diff-text-style mrs-saint-delafield-regular"> shape</span> & stay healthy</h1>
+                    <p class="p-text">A huge selection of health and fitness content, healthy recipes and transformation
+                        stories to help you get fit and stay fit!</p>
                 </div>
 
                 <div class="two-button">
                     <button class="hero-buttons">
                         Join Club Now!
                     </button>
-                    <button class="hero-buttons">
+                    <button class="secnd-hero-buttons">
                         Download App
                     </button>
                 </div>
@@ -72,7 +76,7 @@
     </header>
 
     <main>
-        
+
 
 
     </main>
