Some Styles at Hero Section

--- a/index.html
+++ b/index.html
@@ -54,20 +54,22 @@
             </div>
             <div class="hero-right">
 
-                <div class="small-card-left">
-                    <div class="circle"></div>
-                    <div>
-                        <h2>350 +</h2>
-                        <p>Video tutorial</p>
-                    </div>
-
+                <div class="small-card-right">
+                    <h2>500 +</h2>
+                    <p>Free Workout Videos</p>
                 </div>
                 <div>
                     <img src="img/banner.png" alt="">
                 </div>
-                <div class="small-card-right">
-                    <h2>500 +</h2>
-                    <p>Free Workout Videos</p>
+                
+
+                <div class="small-card-left">
+                    <div class="circle"></div>
+                    <div>
+                        <h2 class="small-card-h-text">350 +</h2>
+                        <p class="p-text">Video tutorial</p>
+                    </div>
+
                 </div>
 
             </div>
