Habit Section created

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <div class="hero-right">
 
                 <div class="small-card-right">
-                    <h2>500 +</h2>
-                    <p>Free Workout Videos</p>
+                    <h2 class="small-card-h-text">500 +</h2>
+                    <p class="p-text">Free Workout Videos</p>
                 </div>
                 <div>
                     <img src="img/banner.png" alt="">
@@ -78,6 +78,32 @@
     </header>
 
     <main>
+        <section class="habit-container">
+            <h2 class="habit-container-text">Change Your Habits</h2>
+            <p id="habit-text" class="p-text">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <div class="circle-cards">
+                <div class="circle-box">
+                    <img class="circle-img" src="img/image-3.jpg" alt="">
+                    <h6 class="circle-box-htext">Movement</h6>
+                    <p class="p-text">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="circle-box">
+                    <img class="circle-img" src="img/image-2.jpg" alt="">
+                    <h6 class="circle-box-htext">Time</h6>
+                    <p class="p-text">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="circle-box">
+                    <img class="circle-img" src="img/image-4.jpg" alt="">
+                    <h6 class="circle-box-htext">Practice</h6>
+                    <p class="p-text">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="circle-box">
+                    <img class="circle-img" src="img/image-5.jpg" alt="">
+                    <h6 class="circle-box-htext">Weight Loss</h6>
+                    <p class="p-text">We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+        </section>
 
 
 
