Run an extra mile section created

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <section class="hero-section">
             <div class="hero-left">
                 <div class="hp-text">
-                    <h1 class="h-text">Get body in<span class="diff-text-style mrs-saint-delafield-regular"> shape</span> & stay healthy</h1>
+                    <h1 class="h-text">Get body in<span class="diff-text-style mrs-saint-delafield-regular">
+                            shape</span> & stay healthy</h1>
                     <p class="p-text">A huge selection of health and fitness content, healthy recipes and transformation
                         stories to help you get fit and stay fit!</p>
                 </div>
@@ -61,7 +62,7 @@
                 <div>
                     <img src="img/banner.png" alt="">
                 </div>
-                
+
 
                 <div class="small-card-left">
                     <div class="circle"></div>
@@ -80,7 +81,8 @@
     <main>
         <section class="habit-container">
             <h2 class="habit-container-text">Change Your Habits</h2>
-            <p id="habit-text" class="p-text">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <p id="habit-text" class="p-text">We believe fitness should be accessible to everyone, everywhere,
+                regardless of income or access to a gym.</p>
             <div class="circle-cards">
                 <div class="circle-box">
                     <img class="circle-img" src="img/image-3.jpg" alt="">
@@ -102,6 +104,18 @@
                     <h6 class="circle-box-htext">Weight Loss</h6>
                     <p class="p-text">We believe fitness should be accessible to everyone</p>
                 </div>
+            </div>
+        </section>
+
+        <section class="run-extra-container">
+            <div>
+                <h2 class="habit-container-text">Run an Extra<br/>Mile Easily</h2>
+                <p class="p-text run-extra-text">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                    gym. With hundreds of professional workouts.</p>
+                <button class="hero-buttons">Join Now</button>
+            </div>
+            <div>
+                <img class="run-image" src="img/run.jpg" alt="A Man Running">
             </div>
         </section>
 
