--- a/index.html
+++ b/index.html
@@ -109,13 +109,59 @@
 
         <section class="run-extra-container">
             <div>
-                <h2 class="habit-container-text">Run an Extra<br/>Mile Easily</h2>
-                <p class="p-text run-extra-text">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                <h2 class="habit-container-text">Run an Extra<br />Mile Easily</h2>
+                <p class="p-text run-extra-text">We believe fitness should be accessible to everyone, everywhere,
+                    regardless of income or access to a
                     gym. With hundreds of professional workouts.</p>
                 <button class="hero-buttons">Join Now</button>
             </div>
             <div>
                 <img class="run-image" src="img/run.jpg" alt="A Man Running">
+            </div>
+        </section>
+
+        <section>
+            <div class="bmi-text-container">
+                <h2 class="habit-container-text">BMI Calculator</h2>
+                <p class="p-text">We believe fitness should be accessible to everyone, everywhere, regardless of income
+                    or access to a gym.</p>
+            </div>
+            <div class="bmi-calculator-chart">
+                <div>
+                    <h2 class="habit-container-text">BMI Calculator Chart</h2>
+                    <table>
+                        <tr>
+                            <th>BMI</th>
+                            <th>Weight Status</th>
+                        </tr>
+                        <tr>
+                            <td class="p-text">Below 18.5</td>
+                            <td class="p-text">Underweight</td>                            
+                        </tr>
+                        <tr>
+                            <td class="p-text">18.5 - 24.9</td>
+                            <td class="p-text">Healthy</td>                            
+                        </tr>
+                        <tr>
+                            <td class="p-text">25.0 - 29.9</td>
+                            <td class="p-text">Overweight</td>                            
+                        </tr>
+                        <tr>
+                            <td class="p-text">30.0 - and Above</td>                            
+                            <td class="p-text">Obese</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="bmi-calculate-form-container">
+                    <h2 class="habit-container-text">Calculate your BMI</h2>
+                    <p class="p-text">We believe fitness should be accessible to everyone, everywhere, regardless of income or access
+                        to a gym. </p>
+                    <div>
+                        <form action="">
+
+                        </form>
+                    </div>
+                </div>
             </div>
         </section>
 
