--- a/index.html
+++ b/index.html
@@ -176,11 +176,30 @@
                                     <option value="GYM">GYM</option>
                                     <option value="Diet">Diet</option>
                                 </select>
-                                <input class="hero-buttons f-submit-button" type="submit" name="Calculate" value="Calculate" id="">
+                                <input class="hero-buttons f-submit-button" type="submit" name="Calculate"
+                                    value="Calculate" id="">
                             </form>
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section>
+            <dir>
+                <h2 class="habit-container-text">Meet Our Team</h2>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                    gym.</p>
+            </dir>
+            <div>
+                <div class="trainer-card">
+
+                </div>
+                <div class="trainer-card"></div>
+                <div class="trainer-card"></div>
+                <div class="trainer-card"></div>
+                <div class="trainer-card"></div>
+                <div class="trainer-card"></div>
             </div>
         </section>
 
@@ -190,6 +209,37 @@
 
     <footer>
 
+        <section class="footer-container">
+            <div>
+                <h2 class="footer-h-text">Fitness</h2>
+                <p class="p-text">We believe fitness should be accessible to everyone, everywhere, regardless of income
+                    or access to a gym. With hundreds of professional workouts.</p>
+            </div>
+            <div>
+                <h4 class="habit-container-text bmi-font-size">Get Started</h4>
+                <ul class="footer-links">
+                    <li>Service</li>
+                    <li>Contact Us</li>
+                    <li>Affiliate Program</li>
+                    <li>About Us</li>
+                </ul>
+            </div>
+            <div>
+                <h4 class="habit-container-text bmi-font-size">Get Started</h4>
+                <ul class="footer-links">
+                    <li>Fitness</li>
+                    <li>Platform</li>
+                    <li>Workout Libary</li>
+                    <li>App Design</li>
+                </ul>
+            </div>
+        </section>
+        <section class="footer-bottom">
+            <div class="footer-line"></div>
+            <div>
+                <p class="bottom-p-text">All right reserved @Fitness 2024</p>
+            </div>
+        </section>
 
     </footer>
 
