Team Section Created

--- a/index.html
+++ b/index.html
@@ -185,21 +185,39 @@
             </div>
         </section>
 
-        <section>
+        <section class="team-container">
             <dir>
                 <h2 class="habit-container-text">Meet Our Team</h2>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                <p class="p-text">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
                     gym.</p>
             </dir>
-            <div>
-                <div class="trainer-card">
-
+            <div class="team-background">
+                <div class="team-cards">
+                    <div class="trainer-card-jerome">
+                        <h6>Jerome Bell</h6>
+                        <p>Trainer</p>
+                    </div>
+                    <div class="trainer-card-cameron">
+                        <h6>Cameron Williamson</h6>
+                        <p>Trainer</p>
+                    </div>
+                    <div class="trainer-card-darrell">
+                        <h6>Darrell Steward</h6>
+                        <p>Trainer</p>
+                    </div>
+                    <div class="trainer-card-dianne">
+                        <h6>Dianne Russell</h6>
+                        <p>Trainer</p>
+                    </div>
+                    <div class="trainer-card-cody">
+                        <h6>Cody Fisher</h6>
+                        <p>Trainer</p>
+                    </div>
+                    <div class="trainer-card-theresa">
+                        <h6>Theresa Webb</h6>
+                        <p>Trainer</p>
+                    </div>
                 </div>
-                <div class="trainer-card"></div>
-                <div class="trainer-card"></div>
-                <div class="trainer-card"></div>
-                <div class="trainer-card"></div>
-                <div class="trainer-card"></div>
             </div>
         </section>
 
