Team section done

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         </section>
 
         <section class="team-container">
-            <dir>
+            <dir class="team-text">
                 <h2 class="habit-container-text">Meet Our Team</h2>
                 <p class="p-text">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
                     gym.</p>
@@ -194,28 +194,28 @@
             <div class="team-background">
                 <div class="team-cards">
                     <div class="trainer-card-jerome">
-                        <h6>Jerome Bell</h6>
-                        <p>Trainer</p>
+                        <h4 class="team-box-htext">Jerome Bell</h6>
+                        <p class="team-p-text">Trainer</p>
                     </div>
                     <div class="trainer-card-cameron">
-                        <h6>Cameron Williamson</h6>
-                        <p>Trainer</p>
+                        <h4 class="team-box-htext">Cameron Williamson</h6>
+                        <p class="team-p-text">Trainer</p>
                     </div>
                     <div class="trainer-card-darrell">
-                        <h6>Darrell Steward</h6>
-                        <p>Trainer</p>
+                        <h4 class="team-box-htext">Darrell Steward</h6>
+                        <p class="team-p-text">Trainer</p>
                     </div>
                     <div class="trainer-card-dianne">
-                        <h6>Dianne Russell</h6>
-                        <p>Trainer</p>
+                        <h4 class="team-box-htext">Dianne Russell</h6>
+                        <p class="team-p-text">Trainer</p>
                     </div>
                     <div class="trainer-card-cody">
-                        <h6>Cody Fisher</h6>
-                        <p>Trainer</p>
+                        <h4 class="team-box-htext">Cody Fisher</h6>
+                        <p class="team-p-text">Trainer</p>
                     </div>
                     <div class="trainer-card-theresa">
-                        <h6>Theresa Webb</h6>
-                        <p>Trainer</p>
+                        <h4 class="team-box-htext">Theresa Webb</h6>
+                        <p class="team-p-text">Trainer</p>
                     </div>
                 </div>
             </div>
